Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
MDEV-21117 had to relax own events acceptance condition for a case when
a former semisync master server recovers after crash as the semisync slave.
That however admits a possibility for endless event "orbiting" in the semisync circular setup
where the master is also a slave.
As a work-around CHANGE MASTER TO ... ignore_domain_ids=(`own_domain_id`) can do,
where own_domain_id is the value of this_server@@global.gtid_domain_id. The command should be invoked
on every server node of the circle configuration.
Also @@global.gtid_strict_mode = ON blocks any attempt to execute own event; the event circulation would stop, but the slave errors out.
Attachments
Issue Links
- relates to
-
MDEV-28292 Allow both --replicate-same-server-id=on and --log-slave-updates=on to be enabled at the same time
-
- Closed
-